src/main/antlr4/agent/.antlr/AgentParser.java
// Generated from /home/valdir/Documents/agent-project/src/main/antlr4/agent/Agent.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AgentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, BELIEFS=20, DESIRES=21, INTENTIONS=22, PLANS=23, LCLETTER=24, 
		UCLETTER=25, DIGIT=26, WS=27, BlockComment=28, LineComment=29;
	public static final int
		RULE_agent = 0, RULE_context = 1, RULE_param = 2, RULE_contextName = 3, 
		RULE_primitiveContextName = 4, RULE_customContextName = 5, RULE_type = 6, 
		RULE_customType = 7, RULE_plan = 8, RULE_action = 9, RULE_functionInvocation = 10, 
		RULE_functionName = 11, RULE_argumentList = 12, RULE_expression = 13, 
		RULE_compoundaction = 14, RULE_listOfClauses = 15, RULE_formulas = 16, 
		RULE_propFormula = 17, RULE_folFormula = 18, RULE_plansFormulas = 19, 
		RULE_bridgeRule = 20, RULE_head = 21, RULE_body = 22, RULE_propClause = 23, 
		RULE_folClause = 24, RULE_propLogExpr = 25, RULE_folLogExpr = 26, RULE_character = 27, 
		RULE_semanticRules = 28;
	public static final String[] ruleNames = {
		"agent", "context", "param", "contextName", "primitiveContextName", "customContextName", 
		"type", "customType", "plan", "action", "functionInvocation", "functionName", 
		"argumentList", "expression", "compoundaction", "listOfClauses", "formulas", 
		"propFormula", "folFormula", "plansFormulas", "bridgeRule", "head", "body", 
		"propClause", "folClause", "propLogExpr", "folLogExpr", "character", "semanticRules"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "':'", "'prop'", "'fol'", "'_'", "','", "'plan'", 
		"'action'", "'\"'", "'['", "']'", "':-'", "'.'", "'!'", "'not'", "'and'", 
		"'or'", "'.semantic'", "'beliefs'", "'desires'", "'intentions'", "'plans'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "BELIEFS", "DESIRES", 
		"INTENTIONS", "PLANS", "LCLETTER", "UCLETTER", "DIGIT", "WS", "BlockComment", 
		"LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Agent.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AgentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AgentParser.EOF, 0); }
		public List<ContextContext> context() {
			return getRuleContexts(ContextContext.class);
		}
		public ContextContext context(int i) {
			return getRuleContext(ContextContext.class,i);
		}
		public List<BridgeRuleContext> bridgeRule() {
			return getRuleContexts(BridgeRuleContext.class);
		}
		public BridgeRuleContext bridgeRule(int i) {
			return getRuleContext(BridgeRuleContext.class,i);
		}
		public AgentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agent; }
	}

	public final AgentContext agent() throws RecognitionException {
		AgentContext _localctx = new AgentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_agent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__14) | (1L << BELIEFS) | (1L << DESIRES) | (1L << INTENTIONS) | (1L << PLANS))) != 0)) {
				{
				setState(60);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
				case BELIEFS:
				case DESIRES:
				case INTENTIONS:
				case PLANS:
					{
					setState(58);
					context();
					}
					break;
				case T__14:
					{
					setState(59);
					bridgeRule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextContext extends ParserRuleContext {
		public ContextNameContext contextName() {
			return getRuleContext(ContextNameContext.class,0);
		}
		public FormulasContext formulas() {
			return getRuleContext(FormulasContext.class,0);
		}
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public TerminalNode PLANS() { return getToken(AgentParser.PLANS, 0); }
		public PlansFormulasContext plansFormulas() {
			return getRuleContext(PlansFormulasContext.class,0);
		}
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_context);
		int _la;
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case BELIEFS:
			case DESIRES:
			case INTENTIONS:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				contextName();
				setState(68);
				match(T__0);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << LCLETTER) | (1L << UCLETTER) | (1L << DIGIT))) != 0)) {
					{
					setState(69);
					param();
					}
				}

				setState(72);
				match(T__1);
				setState(73);
				match(T__2);
				setState(74);
				formulas();
				}
				break;
			case PLANS:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(PLANS);
				setState(77);
				match(T__0);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3 || _la==T__4) {
					{
					setState(78);
					_la = _input.LA(1);
					if ( !(_la==T__3 || _la==T__4) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(81);
				match(T__1);
				setState(82);
				match(T__2);
				setState(83);
				plansFormulas();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextNameContext extends ParserRuleContext {
		public PrimitiveContextNameContext primitiveContextName() {
			return getRuleContext(PrimitiveContextNameContext.class,0);
		}
		public CustomContextNameContext customContextName() {
			return getRuleContext(CustomContextNameContext.class,0);
		}
		public ContextNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextName; }
	}

	public final ContextNameContext contextName() throws RecognitionException {
		ContextNameContext _localctx = new ContextNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_contextName);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BELIEFS:
			case DESIRES:
			case INTENTIONS:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				primitiveContextName();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				customContextName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveContextNameContext extends ParserRuleContext {
		public TerminalNode BELIEFS() { return getToken(AgentParser.BELIEFS, 0); }
		public TerminalNode DESIRES() { return getToken(AgentParser.DESIRES, 0); }
		public TerminalNode INTENTIONS() { return getToken(AgentParser.INTENTIONS, 0); }
		public PrimitiveContextNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveContextName; }
	}

	public final PrimitiveContextNameContext primitiveContextName() throws RecognitionException {
		PrimitiveContextNameContext _localctx = new PrimitiveContextNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitiveContextName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BELIEFS) | (1L << DESIRES) | (1L << INTENTIONS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CustomContextNameContext extends ParserRuleContext {
		public List<CharacterContext> character() {
			return getRuleContexts(CharacterContext.class);
		}
		public CharacterContext character(int i) {
			return getRuleContext(CharacterContext.class,i);
		}
		public List<TerminalNode> LCLETTER() { return getTokens(AgentParser.LCLETTER); }
		public TerminalNode LCLETTER(int i) {
			return getToken(AgentParser.LCLETTER, i);
		}
		public List<TerminalNode> UCLETTER() { return getTokens(AgentParser.UCLETTER); }
		public TerminalNode UCLETTER(int i) {
			return getToken(AgentParser.UCLETTER, i);
		}
		public CustomContextNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customContextName; }
	}

	public final CustomContextNameContext customContextName() throws RecognitionException {
		CustomContextNameContext _localctx = new CustomContextNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_customContextName);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__5);
			setState(96); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(95);
					_la = _input.LA(1);
					if ( !(_la==LCLETTER || _la==UCLETTER) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(98); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCLETTER) | (1L << UCLETTER) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(100);
				character();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public CustomTypeContext customType() {
			return getRuleContext(CustomTypeContext.class,0);
		}
		public SemanticRulesContext semanticRules() {
			return getRuleContext(SemanticRulesContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(T__3);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(T__4);
				}
				break;
			case LCLETTER:
			case UCLETTER:
			case DIGIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				customType();
				{
				setState(109);
				match(T__6);
				setState(110);
				semanticRules();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CustomTypeContext extends ParserRuleContext {
		public List<CharacterContext> character() {
			return getRuleContexts(CharacterContext.class);
		}
		public CharacterContext character(int i) {
			return getRuleContext(CharacterContext.class,i);
		}
		public CustomTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customType; }
	}

	public final CustomTypeContext customType() throws RecognitionException {
		CustomTypeContext _localctx = new CustomTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_customType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				character();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCLETTER) | (1L << UCLETTER) | (1L << DIGIT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlanContext extends ParserRuleContext {
		public List<ListOfClausesContext> listOfClauses() {
			return getRuleContexts(ListOfClausesContext.class);
		}
		public ListOfClausesContext listOfClauses(int i) {
			return getRuleContext(ListOfClausesContext.class,i);
		}
		public CompoundactionContext compoundaction() {
			return getRuleContext(CompoundactionContext.class,0);
		}
		public PlanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plan; }
	}

	public final PlanContext plan() throws RecognitionException {
		PlanContext _localctx = new PlanContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_plan);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__7);
			setState(120);
			match(T__0);
			setState(121);
			listOfClauses();
			setState(122);
			match(T__6);
			setState(123);
			compoundaction();
			setState(124);
			match(T__6);
			setState(125);
			listOfClauses();
			setState(126);
			match(T__6);
			setState(127);
			listOfClauses();
			setState(128);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public List<ListOfClausesContext> listOfClauses() {
			return getRuleContexts(ListOfClausesContext.class);
		}
		public ListOfClausesContext listOfClauses(int i) {
			return getRuleContext(ListOfClausesContext.class,i);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__8);
			setState(131);
			match(T__0);
			setState(132);
			functionInvocation();
			setState(133);
			match(T__6);
			setState(134);
			listOfClauses();
			setState(135);
			match(T__6);
			setState(136);
			listOfClauses();
			setState(137);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionInvocationContext extends ParserRuleContext {
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public FunctionInvocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionInvocation; }
	}

	public final FunctionInvocationContext functionInvocation() throws RecognitionException {
		FunctionInvocationContext _localctx = new FunctionInvocationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_functionInvocation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			functionName();
			setState(140);
			match(T__0);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(141);
				argumentList();
				}
			}

			setState(144);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionNameContext extends ParserRuleContext {
		public List<TerminalNode> LCLETTER() { return getTokens(AgentParser.LCLETTER); }
		public TerminalNode LCLETTER(int i) {
			return getToken(AgentParser.LCLETTER, i);
		}
		public List<CharacterContext> character() {
			return getRuleContexts(CharacterContext.class);
		}
		public CharacterContext character(int i) {
			return getRuleContext(CharacterContext.class,i);
		}
		public FunctionNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionName; }
	}

	public final FunctionNameContext functionName() throws RecognitionException {
		FunctionNameContext _localctx = new FunctionNameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_functionName);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(146);
					match(LCLETTER);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(149); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCLETTER) | (1L << UCLETTER) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(151);
				character();
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentListContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentList; }
	}

	public final ArgumentListContext argumentList() throws RecognitionException {
		ArgumentListContext _localctx = new ArgumentListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_argumentList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			expression();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(158);
				match(T__6);
				setState(159);
				expression();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<CharacterContext> character() {
			return getRuleContexts(CharacterContext.class);
		}
		public CharacterContext character(int i) {
			return getRuleContext(CharacterContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__9);
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCLETTER) | (1L << UCLETTER) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(166);
				character();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompoundactionContext extends ParserRuleContext {
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public CompoundactionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundaction; }
	}

	public final CompoundactionContext compoundaction() throws RecognitionException {
		CompoundactionContext _localctx = new CompoundactionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_compoundaction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(174);
				match(T__10);
				setState(175);
				action();
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(176);
					match(T__6);
					setState(177);
					action();
					}
					}
					setState(182);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(183);
				match(T__11);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOfClausesContext extends ParserRuleContext {
		public List<PropClauseContext> propClause() {
			return getRuleContexts(PropClauseContext.class);
		}
		public PropClauseContext propClause(int i) {
			return getRuleContext(PropClauseContext.class,i);
		}
		public List<FolClauseContext> folClause() {
			return getRuleContexts(FolClauseContext.class);
		}
		public FolClauseContext folClause(int i) {
			return getRuleContext(FolClauseContext.class,i);
		}
		public ListOfClausesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfClauses; }
	}

	public final ListOfClausesContext listOfClauses() throws RecognitionException {
		ListOfClausesContext _localctx = new ListOfClausesContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_listOfClauses);
		int _la;
		try {
			setState(215);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(199);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LCLETTER:
					{
					setState(187);
					propClause();
					}
					break;
				case T__10:
					{
					setState(188);
					match(T__10);
					setState(189);
					propClause();
					setState(194);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__6) {
						{
						{
						setState(190);
						match(T__6);
						setState(191);
						propClause();
						}
						}
						setState(196);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(197);
					match(T__11);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(213);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LCLETTER:
					{
					setState(201);
					folClause();
					}
					break;
				case T__10:
					{
					setState(202);
					match(T__10);
					setState(203);
					folClause();
					setState(208);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__6) {
						{
						{
						setState(204);
						match(T__6);
						setState(205);
						folClause();
						}
						}
						setState(210);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(211);
					match(T__11);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulasContext extends ParserRuleContext {
		public List<PropFormulaContext> propFormula() {
			return getRuleContexts(PropFormulaContext.class);
		}
		public PropFormulaContext propFormula(int i) {
			return getRuleContext(PropFormulaContext.class,i);
		}
		public List<FolFormulaContext> folFormula() {
			return getRuleContexts(FolFormulaContext.class);
		}
		public FolFormulaContext folFormula(int i) {
			return getRuleContext(FolFormulaContext.class,i);
		}
		public FormulasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formulas; }
	}
